Some work on maps slides

--- a/smwcon/2012fall/maps/maps-is-awesome.html
+++ b/smwcon/2012fall/maps/maps-is-awesome.html
@@ -147,9 +147,31 @@
         <li>Copyable coordinates</li>
         <li>Points of interest (Google Maps)</li>
         <li>Marker grouping (OpenLayers)</li>
-        <li>Realizable maps</li>
+        <li>Resizable maps</li>
         <li>Inline labels (Google Maps)</li>
         <li>Markers that change on click</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Usage simplification</h3>
+    <ul>
+        <li>display_map</li>
+        <li>display_point</li>
+        <li>display_points</li>
+        <li>display_lines</li>
+        <li>display_polygons</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Usage simplification</h3>
+    <ul>
+        <li>display_map</li>
+        <li><s>display_point</s></li>
+        <li><s>display_points</s></li>
+        <li><s>display_lines</s></li>
+        <li><s>display_polygons</s></li>
     </ul>
 </section>
 
@@ -159,7 +181,14 @@
         <li>Google Maps v2</li>
         <li>Yahoo! Maps</li>
         <li>WMF OSM (tenporary disabled)</li>
-        <li>display_points vs display_map</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Roadmap: image layers</h3>
+    <ul class="incremental">
+        <li>Images as base layers</li>
+        <li>Being worked on by Daniel Werner</li>
     </ul>
 </section>
 
@@ -174,26 +203,10 @@
 </section>
 
 <section>
-    <h3>Roadmap: image layers</h3>
-    <ul class="incremental">
-        <li>Images as base layers</li>
-        <li>Being worked on by Daniel Werner</li>
-    </ul>
-</section>
-
-<section>
     <h3>Roadmap: visual map editor</h3>
     <ul class="incremental">
         <li>Improve integration in Maps</li>
         <li>Integrate with form inputs</li>
-    </ul>
-</section>
-
-<section>
-    <h3>Roadmap: ???</h3>
-    <ul class="incremental">
-        <li>Are you working on something?</li>
-        <li>Anything you would like to be added?</li>
     </ul>
 </section>
 
@@ -217,10 +230,9 @@
         <li>
             <a href="http://jeroendedauw.github.com/slides/smwcon/2012fall/#smw-is-awesome.html#1">These slides on GitHub (pages)</a>
             <br />
-            &#160;&#160;-&#160;bit.ly/smw-2012<br />&#160;
+            &#160;&#160;-&#160;bit.ly/maps-2012<br />&#160;
         </li>
-        <li><a href="http://semantic-mediawiki.org">semantic-mediawiki.org</a><br />&#160;</li>
-        <li><a href="https://twitter.com/#!/wikidata">@SemanticMW on Twitter</a><br />&#160;</li>
+        <li><a href="http://bit.ly/mediawiki-maps">bit.ly/mediawiki-maps</a><br />&#160;</li>
     </ul>
 </section>
 
