--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -110,9 +110,21 @@
 </section>
 
 <section>
+    <!-- Markus -->
+    <h3>Page Metadata</h3>
+    <ul>
+        <li>Modification date</li>
+        <li>Creation date</li>
+        <li>Last editor is</li>
+        <li>Is a new page</li>
+        <li>enabled in LocalSettings.php: $smwgPageSpecialProperties = array( '_MDAT', '_CDAT', '_NEWP', '_LEDT' );</li>
+    </ul>
+</section>
+
+<section>
     <h3>SMW 1.8: compatibility</h3>
     <ul>
-        <!-- Jeroen -->
+        <!-- Markus -->
         <li>Dropped support for MW 1.16</li>
         <li>Support for MW 1.17 up to MW 1.21</li>
     </ul>
@@ -122,7 +134,7 @@
     <h3>SMW 1.8: SQLStore 3</h3>
     <ul>
         <!-- Markus -->
-        <li>TODO</li>
+        <li>Google Summer of Code 2012 project</li>
         <li><a href="http://semantic-mediawiki.org/wiki/SMWCon_Fall_2012/Improvements_in_SQLStore3">Talk by Nischay Nahata</a></li>
     </ul>
 </section>
@@ -162,16 +174,11 @@
 </section>
 
 <section>
-    <h3>Other improvements</h3>
+    <h3>Improved continuation links</h3>
     <ul>
-        <!-- Markus -->
-        <li>Auto-numbering for subobjects</li>
-
         <!-- Jeroen -->
-        <li>Improved continuation links</li>
-
-        <!-- Markus -->
-        <li>Creation date, Last editor is, Is a new page</li>
+        <li>Generic link generation</li>
+        <li>All result formats</li>
     </ul>
 </section>
 
