--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -235,7 +235,7 @@
             &#160;&#160;-&#160;bit.ly/smw-2012<br />&#160;
         </li>
         <li><a href="http://semantic-mediawiki.org">semantic-mediawiki.org</a><br />&#160;</li>
-        <li><a href="https://twitter.com/#!/wikidata">@SemanticMW on Twitter</a><br />&#160;</li>
+        <li><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a><br />&#160;</li>
     </ul>
 </section>
 
