--- a/smwcon/2012fall/smw-is-awesome.html
+++ b/smwcon/2012fall/smw-is-awesome.html
@@ -15,7 +15,7 @@
 
 <section>
     <!-- Jeroen -->
-    <img src="resources/popup.png" width="600">
+    <img src="resources/popup.png" width="600" class="popupkitteh">
 </section>
 
 <section>
