--- a/smwcon/2012fall/maps/maps-is-awesome.html
+++ b/smwcon/2012fall/maps/maps-is-awesome.html
@@ -180,7 +180,7 @@
     <ul class="incremental">
         <li>Google Maps v2</li>
         <li>Yahoo! Maps</li>
-        <li>WMF OSM (tenporary disabled)</li>
+        <li>WMF OSM (temporary disabled)</li>
     </ul>
 </section>
 
@@ -219,11 +219,6 @@
 </section>
 
 <section>
-    <h3>Questions</h3>
-    <img src="resources/dafuiq.jpg" class="dafuiq">
-</section>
-
-<section>
     <h3>Special:Links</h3>
     <ul style="margin-left:142px">
         <li><a href="https://github.com/JeroenDeDauw/slides/">These slides on GitHub (source)</a><br />&#160;</li>
@@ -234,6 +229,11 @@
         </li>
         <li><a href="http://bit.ly/mediawiki-maps">bit.ly/mediawiki-maps</a><br />&#160;</li>
     </ul>
+</section>
+
+<section>
+    <h3>Questions</h3>
+    <img src="resources/dafuiq.jpg" class="dafuiq">
 </section>
 
 <section>
