Added some initial slide stuff

--- a/ccc/29c3/slides.html
+++ b/ccc/29c3/slides.html
@@ -30,7 +30,9 @@
     <h3>Why MediaWiki?</h3>
 
     <ul>
-        <li></li>
+        <li>The community knows it</li>
+        <li>Integration with existing tools</li>
+        <li>Provides revision history, patrolling tools, watchlists, discussion pages, ...</li>
     </ul>
 </section>
 
@@ -38,6 +40,16 @@
     <h3>Phase 1</h3>
 
     <ul>
+        <li>Creating an entity base</li>
+        <li>Which serves as a repository for "language links"</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Entities</h3>
+
+    <ul>
+        <li></li>
         <li></li>
     </ul>
 </section>
@@ -46,7 +58,10 @@
     <h3>Entities as wiki pages</h3>
 
     <ul>
-        <li></li>
+        <li>Each Entity has a corresponding page</li>
+        <li>Page contains the primary copy of the Entity</li>
+        <li>JSON serialization</li>
+        <li>Alternate viewing, editing, diff, ... views</li>
     </ul>
 </section>
 
@@ -62,7 +77,8 @@
     <h3>Items</h3>
 
     <ul>
-        <li></li>
+        <li>Item extends Entity</li>
+        <li>Has zero or more "sitelinks"</li>
     </ul>
 </section>
 
