--- a/ccc/29c3/slides.html
+++ b/ccc/29c3/slides.html
@@ -49,8 +49,10 @@
     <h3>Entities</h3>
 
     <ul>
-        <li></li>
-        <li></li>
+        <li>Have a unique ID</li>
+        <li>Have zero or one labels per language</li>
+        <li>Have zero or one descriptions per language</li>
+        <li>Have zero or more aliases per language</li>
     </ul>
 </section>
 
@@ -69,7 +71,9 @@
     <h3>Additional lookup tables</h3>
 
     <ul>
-        <li></li>
+        <li>Entity per page</li>
+        <li>Links of items</li>
+        <li>Terms</li>
     </ul>
 </section>
 
@@ -83,26 +87,11 @@
 </section>
 
 <section>
-    <h3>Claims</h3>
-
-    <ul>
-        <li></li>
-    </ul>
-</section>
-
-<section>
-    <h3>Snaks</h3>
-
-    <ul>
-        <li></li>
-    </ul>
-</section>
-
-<section>
     <h3>Various special pages</h3>
 
     <ul>
-        <li></li>
+        <li>Item given site id and page</li>
+        <li>Item given language and label</li>
     </ul>
 </section>
 
@@ -110,7 +99,7 @@
     <h3>Change propagation</h3>
 
     <ul>
-        <li></li>
+        <li>Repo changes (WD) => client(s) (WPs)</li>
     </ul>
 </section>
 
@@ -118,8 +107,32 @@
     <h3>Phase 2</h3>
 
     <ul>
-        <li></li>
+        <li>Adding claims to entities</li>
     </ul>
+</section>
+
+<section>
+    <h3>Claims</h3>
+
+    <p style="text-align: center">
+        <img src="resources/Wikidata_statement.png" width="670px">
+    </p>
+</section>
+
+<section>
+    <h3>Claims</h3>
+
+    <p style="text-align: center">
+        <img src="resources/Wikidata_model_StatementDescription_UML.png">
+    </p>
+</section>
+
+<section>
+    <h3>Snaks</h3>
+
+    <p style="text-align: center">
+        <img src="resources/Wikidata_model_Snaks_UML.png" width="670px">
+    </p>
 </section>
 
 <section>
