Remove non needed stuff and add some basis

--- a/SOLID/LSP/index.html
+++ b/SOLID/LSP/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>The Liskov Substitution Principle</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -32,61 +32,33 @@
 
 		<div class="reveal">
 
-			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 
 				<section>
-					<h3>Liskov Substitution Principle</h3>
-					<h3>The L in SOLID</h3>
+					<h3>The Liskov Substitution Principle</h3>
 					<p>
-						<small>Created by <a href="http://jeroendedauw.com">Jeroen De Dauw</a> / <a href="http://twitter.com/JeroenDeDauw">@JeroenDeDauw</a></small>
+						<small>Presentation by <a href="http://jeroendedauw.com">Jeroen De Dauw</a> / <a href="http://twitter.com/JeroenDeDauw">@JeroenDeDauw</a></small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
+					<h2>foo</h2>
 					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
+						bar
 					</p>
-
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
 				</section>
 
-				<section data-markdown>
-					<script type="text/template">
-						## Markdown support
-
-						For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-
-							<section data-markdown>
-							  ## Markdown support
-
-							  For those of you who like that sort of thing.
-							  Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-							</section>
-					</script>
+				<section>
+					<h2>baz</h2>
+					<a class="image">
+						<img width="320" height="299" src="img/subtype.svg" alt="Y U NO LOAD">
+					</a>
 				</section>
 
-				<section data-state="alert">
+				<section data-state="alert" class="php">
 					<h2>Pretty Code</h2>
 					<pre><code contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) ) {
-        node.className += ' roll';
-      }
-    };
-  }
-}
+// A code be here
 					</code></pre>
 				</section>
 
