--- a/SOLID/LSP/index.html
+++ b/SOLID/LSP/index.html
@@ -306,6 +306,12 @@ function f( List&lt;Shape&gt; $list ) {
     $list.add( new Circle() );
 }
 					</code></pre>
+
+					<p class="fragment">List of Shape <strong>represents</strong> a list of Shape</p>
+				</section>
+
+				<section>
+					<p>The end ... for now</p>
 				</section>
 			</div>
 
