--- a/SOLID/LSP/index.html
+++ b/SOLID/LSP/index.html
@@ -310,7 +310,7 @@ function f( List&lt;Shape&gt; $list ) {
 					<p class="fragment">List of Shape <strong>represents</strong> a list of Shape</p>
 				</section>
 
-				<section>
+				<section data-state="blackout">
 					<p>The end ... for now</p>
 				</section>
 			</div>
