--- a/SOLID/LSP/index.html
+++ b/SOLID/LSP/index.html
@@ -281,7 +281,7 @@ class Rectangle extends Square {
 
 				<section>
 					<p>Integer <strong>is a</strong> real number</p>
-					<p class="fragment">Complex number <strong>is a</strong> real number</p>
+					<p class="fragment">Real number <strong>is a</strong> complex number</p>
 					<p class="fragment">Complex number <strong>contains</strong> two real number</p>
 
 					<p class="fragment">Makes perfect sense.<br />Free beer for who implements this and successfully instantiates a complex number</p>
@@ -293,7 +293,7 @@ class Rectangle extends Square {
 					<p>Class T</p>
 					<p>Class S extends T</p>
 
-					<p class="fragment">List&lt;T&gt; is not a subtype of List&lt;S&gt;</p>
+					<p class="fragment">List&lt;S&gt; is not a subtype of List&lt;T&gt;</p>
 
 					<p class="fragment">Cannot pass list of Square to function expecting list of Shape</p>
 
@@ -307,7 +307,7 @@ function f( List&lt;Shape&gt; $list ) {
 }
 					</code></pre>
 
-					<p class="fragment">List of Shape <strong>represents</strong> a list of Shape</p>
+					<p class="fragment">The relationship is again not carried over</p>
 				</section>
 
 				<section data-state="blackout">
