--- a/SOLID/LSP/index.html
+++ b/SOLID/LSP/index.html
@@ -313,6 +313,11 @@ function f( List&lt;Shape&gt; $list ) {
 				<section data-state="blackout">
 					<p>The end ... for now</p>
 				</section>
+
+				<section data-state="blackout">
+					<p><a href="https://en.wikipedia.org/wiki/Liskov_substitution">Liskov substitution principle (WP)</a></p>
+					<p><a href="http://www.objectmentor.com/resources/articles/lsp.pdf">LSP (Robert C Martin, pdf)</a></p>
+				</section>
 			</div>
 
 		</div>
