--- a/SOLID/LSP/index.html
+++ b/SOLID/LSP/index.html
@@ -315,6 +315,7 @@ function f( List&lt;Shape&gt; $list ) {
 				</section>
 
 				<section data-state="blackout">
+					<p><a href="http://bit.ly/solid-lsp">These slides: bit.ly/solid-lsp</a></p>
 					<p><a href="https://en.wikipedia.org/wiki/Liskov_substitution">Liskov substitution principle (WP)</a></p>
 					<p><a href="http://www.objectmentor.com/resources/articles/lsp.pdf">LSP (Robert C Martin, pdf)</a></p>
 				</section>
