Added base for smwcon spring 2013 slides

--- a/SOLID/LSP/index.html
+++ b/SOLID/LSP/index.html
@@ -6,8 +6,8 @@
 
 		<title>The Liskov Substitution Principle</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="A talk on the theory behind the Liskov substitution principle">
+		<meta name="author" content="Jeroen De Dauw">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
