--- a/smwcon/2013spring/yearly/plugin/notes/notes.html
+++ b/smwcon/2013spring/yearly/plugin/notes/notes.html
@@ -159,7 +159,7 @@
 
 		<div id="notes"></div>
 
-		<script src="../../plugin/markdown/showdown.js"></script>
+		<script src="../markdown/showdown.js"></script>
 		<script>
 
 			window.addEventListener( 'load', function() {
