--- a/smwcon/2013spring/yearly/index.html
+++ b/smwcon/2013spring/yearly/index.html
@@ -1,86 +1,32 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<meta charset="utf8">
+<title>Yearly SMW overview</title>
 
-	<head>
-		<meta charset="utf-8">
+<script src="resources/index.js"></script>
+<link href="resources/index.css" media="screen" rel="stylesheet" type="text/css" />
 
-		<title>Yearly SMW overview</title>
+<iframe allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
 
-		<meta name="description" content="Yearly SMW overview for SMWCon Spring 2013">
-		<meta name="author" content="Jeroen De Dauw">
+<footer>
+	<table><tr>
+    		<td style="text-align:left;">
+    			<a href="http://semantic-mediawiki.org/"><img src="resources/smw.png" style="width:100px" ></a>
+    		</td>
+    		<td valign="top">
+	    		<div class="footertext">
+			        <span style="display:block; font-size: 30px;"><a href="https://semantic-mediawiki.org/wiki/SMWCon_Spring_2013">SMWCon Spring 2013</a></span>
+			        <span style="display:block; font-size: 30px;">Markus Krötzsch & <a href="https://www.mediawiki.org/wiki/User:Jeroen_De_Dauw">Jeroen De Dauw</a></span>
+			        <span style="display:block; font-size: 15px; color: darkgray;"><a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a></span>
+	    		</div>
+    		</td>
+    	</tr></table>
+</footer>
 
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
-		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
-
-		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
-
-		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
-		<script>
-			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
-		</script>
-
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-	</head>
-
-	<body>
-
-		<div class="reveal">
-
-			<div class="slides">
-
-				<section>
-					<h3>Yearly SMW overview</h3>
-					<p>
-						Presentation by <a href="http://twitter.com/JeroenDeDauw">@JeroenDeDauw</a>
-					</p>
-				</section>
-
-				<section>
-					<h2>foo</h2>
-					<p>
-						bar
-					</p>
-
-				</section>
-
-
-		</div>
-
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.min.js"></script>
-
-		<script>
-
-			// Full list of configuration options available here:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: true,
-				progress: true,
-				history: true,
-				center: true,
-
-				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
-
-				// Optional libraries used to extend on reveal.js
-				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/showdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
-					// { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
-				]
-			});
-
-		</script>
-
-	</body>
-</html>
+<div id="controls">
+  <button title="prev" id="back" onclick="Dz.back()">&#9664;</button>
+  <button title="next" id="forward" onclick="Dz.forward()">&#9654;</button>
+  <div id="rightcontrols">
+    <input onchange="Dz.setCursor(this.value)" size="2" id="slideidx" value="0" />/<span id="slidecount">...</span>
+    <button title="Go fullscreen or open in a new window" id="fullscreen" onclick="Dz.goFullscreen()">&#8689;</button>
+  </div>
+</div>
