--- a/smwcon/2013spring/yearly/index.html
+++ b/smwcon/2013spring/yearly/index.html
@@ -341,7 +341,7 @@
                         <li>Code quality improvements</li>
                         <li>More tests</li>
                         <li>Wikibase interoperability</li>
-                        <li class="fragment"><span style="color:lightgray">Stealing stuff from Wikibase</span></li>
+                        <li class="fragment"><span style="color:darkgray">Stealing stuff from Wikibase</span></li>
                     </ul>
                     <p><br /><a href="https://semantic-mediawiki.org/wiki/Roadmap">semantic-mediawiki.org/wiki/Roadmap</a></p>
                 </section>
