Add to SMWCon slides

--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -53,6 +53,100 @@
                     </p>
                 </section>
 
+                <section>
+                    <h3>Overview</h3>
+                    <ul>
+                        <li>Development</li>
+                        <li>Infrastructure</li>
+                        <li>SMW 1.8</li>
+                        <li>SMW 1.9 / roadmap</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>Contributors</h3>
+                    <p class="fragment">~20 developers, 68 total<br /></p>
+                    <p class="fragment">"Large, active development team", top 10%<br /></p>
+                    <p class="fragment">Maintainers: Markus Krötzsch, James Hong Kong & Jeroen</p>
+                </section>
+
+                <section>
+                    <h3>Commits</h3>
+                    <p>
+                        ~1000 commits
+                        <img src="img/commits.jpeg" alt="Y U NO LOAD">
+                        "Stable Y-O-Y development activity"
+                    </p>
+                </section>
+
+                <section>
+                    <h3>Lines of code</h3>
+                    <p>
+                        41k => 58k
+                        <img src="img/loc.jpeg" alt="Y U NO LOAD">
+                        "Mature, well-established codebase"
+                    </p>
+                </section>
+
+                <section data-state="blackout">
+                    <h2>Infrastructure</h2>
+                </section>
+
+                <section>
+                    <section>
+                        <h3>Continuous integration</h3>
+                        <p>
+                            Tests running on Jenkins<br />
+                            <img src="img/jenkins.jpeg" alt="Y U NO LOAD">
+                        </p>
+                    </section>
+
+                    <section>
+                        <p>
+                            Jenkins integration with Gerrit<br />
+                            <img src="img/gerrit.jpeg" alt="Y U NO LOAD">
+                        </p>
+                    </section>
+                </section>
+
+                <section>
+                    <section>
+                        <p>
+                            TravisCI!<br />
+                            <img src="img/travis.jpeg" alt="Y U NO LOAD">
+                        </p>
+                    </section>
+
+                    <section>
+                        <p>
+                            <img src="img/travis_build.jpeg" alt="Y U NO LOAD">
+                        </p>
+                    </section>
+                </section>
+
+                <section>
+                    <section>
+                        <p>
+                            Coveralls.io support
+
+                        </p>
+                    </section>
+
+                    <section>
+                        <p>
+
+
+                        </p>
+                    </section>
+                </section>
+
+                <section>
+                    <p>
+                        Status badges
+
+                    </p>
+                </section>
+
 			</div>
 
 		</div>
