--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -147,6 +147,22 @@
                     </p>
                 </section>
 
+                <section>
+                    <section>
+                        <p>
+                            Composer support!
+
+                        </p>
+                    </section>
+
+                    <section>
+                        <p>
+                            Packagist
+
+                        </p>
+                    </section>
+                </section>
+
 			</div>
 
 		</div>
